@@ -1,5 +1,10 @@
 2006-04-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
+	* src/SDCCmain.c (preProcess): implemented RFE 1449908, define SDCC as the
+	  version number
+
+2006-04-05 Maarten Brock <sourceforge.brock AT dse.nl>
+
 	* src/SDCCpeeph.c (initPeepHole): implemented RFE 1460196, when both
 	  --no-peep and --peep-file <file> are used don't use default rules but
 	  do use the <file>
